2008-07-18  higepon  <higepon@users.sourceforge.jp>

        *  0.0.5 released.

2008-07-16  higepon  <higepon@users.sourceforge.jp>

        * library.scm: Removed CGI library from library.scm, it moved to r6rs-examples/ directory.

        * tools/psyntax-r6rs/psyntax-buildscript-mosh.ss : Added library rules.

        * r6rs-examples/cgi.ss: Rewrote cgi library with R6RS form.

        * r6rs-examples/lambda/wiki.ss: Rewrote lambda wiki with R6RS form.

2008-07-15  higepon  <higepon@users.sourceforge.jp>

        * freeproc.cpp: Added extern char** environ.

2008-07-13  higepon  <higepon@users.sourceforge.jp>

        * freeproc.cpp : Added set-symbol-value and symbol-value for psyntax.

        * VM.cpp (VM::callClosure3): Added for make-custom-binary-input-port.

2008-07-12  higepon  <higepon@users.sourceforge.jp>

        * Regexp.cpp (Regexp::replaceAll): Fixed finite loop.

        * freeproc.cpp (scheme::getEnvironmentVariablesEx): Added get-environment-variables.

        * tools/psyntax-r6rs/psyntax-buildscript-mosh.ss (identifier->library-map): Added for Mosh.

        * freeproc.h (scheme): renamed sys-getenv -> get-environment-variable.

        * freeproc.cpp (scheme::errorEx): Improved message for (error ...).

        * main.cpp (main): Added -b "R6RS batch mode" using psyntax.

        * VM.cpp (VM::getStackTrace): Fixed stack trace bug for <subr>.

        * freeproc.cpp (scheme::vectorPEx): Added vector?.

        * Added r6rs-test directory.

        * library.scm (string): Added document of (string ...).

        * freeproc.cpp (scheme::stringEx): Added (string ...).

2008-07-11  higepon  <higepon@users.sourceforge.jp>

        * match.cpp: pre-compiled.

2008-07-10  higepon  <higepon@users.sourceforge.jp>

        * CompilerProcedures.cpp (labelEx): Moved $label to C++.

2008-07-09  higepon  <higepon@users.sourceforge.jp>

        * compiler.scm (pass3/find-free): locals, can-frees and frees becomes list of symbols(used to be list of lvars).
