@@ -1,2 +1,2 @@
 ;; Do not edit this file generated by ./scripts/gen-free-vars-decl.scm.
-(define *free-vars-decl* '(number? cons car cdr null? set-car! set-cdr! sys-display rxmatch regexp? regexp->string rxmatch-start rxmatch-end rxmatch-after rxmatch-before rxmatch-substring make-string string-set! string-length string->symbol string->number string-append string-split string number->string reverse eof-object? read-char char=? string? get-environment-variable get-environment-variables equal? open-string-input-port sys-open-output-string sys-port-seek open-output-file close-output-port digit->integer get-remaining-input-string readdir file-exists? sys-get-output-string string->regexp char->integer integer->char format current-input-port current-output-port set-current-input-port! set-current-output-port! char? write gensym string=? vector? list? memq eq? member boolean? symbol->string string-ref error get-timeofday make-eq-hashtable hashtable-set! hashtable-ref hashtable-keys eq-hashtable-copy current-error-port values vm/apply pair? init-library-table find10 make-custom-binary-input-port get-u8 bytevector-u8-set! transcoded-port utf-8-codec make-transcoder eof-object sys-open-bytevector-output-port sys-get-bytevector bytevector-length bytevector-u8-ref standard-input-port get-bytevector-n utf8->string open-file-output-port open-file-input-port close-input-port vector regexp-replace regexp-replace-all source-info errorf eval raise raise-continuable with-exception-handler make-vector-type vector-type? vector-type-data vector-type-instance-of? make-typed-vector typed-vector-get-nth typed-vector-set-nth typed-vector? typed-vector-type apply mod div assq exit macroexpand-1 memv procedure? load symbol? dynamic-wind char<=? char<? char>=? char>? read vector->list set-source-info! call-process %get-closure-name append append2 appendA append! pass3/find-free pass3/find-sets pass4/fixup-labels make-code-builder code-builder-put-extra1! code-builder-put-extra2! code-builder-put-extra3! code-builder-put-extra4! code-builder-put-extra5! code-builder-append! code-builder-emit code-builder-put-insn-arg0! code-builder-put-insn-arg1! length list->vector pass3/compile-refer pass1/find-symbol-in-lvars $label $local-ref symbol-value set-symbol-value!))
+(define *free-vars-decl* '(number? cons car cdr null? set-car! set-cdr! sys-display rxmatch regexp? regexp->string rxmatch-start rxmatch-end rxmatch-after rxmatch-before rxmatch-substring make-string string-set! string-length string->symbol string->number string-append string-split string number->string reverse eof-object? read-char char=? string? get-environment-variable get-environment-variables equal? open-string-input-port sys-open-output-string sys-port-seek open-output-file close-output-port digit->integer get-remaining-input-string readdir file-exists? sys-get-output-string string->regexp char->integer integer->char format current-input-port current-output-port set-current-input-port! set-current-output-port! char? write gensym string=? vector? list? memq eq? member boolean? symbol->string string-ref error get-timeofday make-eq-hashtable hashtable-set! hashtable-ref hashtable-keys eq-hashtable-copy current-error-port values vm/apply pair? init-library-table find10 make-custom-binary-input-port get-u8 bytevector-u8-set! transcoded-port utf-8-codec make-transcoder eof-object sys-open-bytevector-output-port sys-get-bytevector bytevector-length bytevector-u8-ref standard-input-port get-bytevector-n utf8->string open-file-output-port open-file-input-port close-input-port vector regexp-replace regexp-replace-all source-info errorf eval raise raise-continuable with-exception-handler make-vector-type vector-type? vector-type-data vector-type-instance-of? make-typed-vector typed-vector-get-nth typed-vector-set-nth typed-vector? typed-vector-type apply mod div assq exit macroexpand-1 memv procedure? load symbol? dynamic-wind char<=? char<? char>=? char>? read vector->list set-source-info! call-process %get-closure-name append append2 appendA append! pass3/find-free pass3/find-sets pass4/fixup-labels make-code-builder code-builder-put-extra1! code-builder-put-extra2! code-builder-put-extra3! code-builder-put-extra4! code-builder-put-extra5! code-builder-append! code-builder-emit code-builder-put-insn-arg0! code-builder-put-insn-arg1! length list->vector pass3/compile-refer pass1/find-symbol-in-lvars $label $local-ref symbol-value set-symbol-value! eq-hash))
